# cppworkspace

./: .gitignore  .gitmodules
Webots Base Etudiant A2016/controllers/youbot/: YoubotData.h  YoubotWebotsAllInclude.h  youbot.c
Webots Base Etudiant A2016/lib/: arm.c  gripper.h
Webots Base Etudiant A2016/worlds/: .youbot.wbproj  .youbot_realistic.wbproj
crazycv/: CMakeLists.txt  CMakeSettings.json
crazycv/crazycv/: CMakeLists.txt  crazycv.cpp  crazycv.h
crazycv/crazycv/include/: cvheaders.h
crazycv/crazycv/src/: imagewrapper.cpp
crazycv/lab_image/: CMakeLists.txt
crazycv/lab_image/inc/: colorwidget.h  home.h  millefeuille.h  millefeuillebd.h
crazycv/lab_image/src/: colorwidget.cpp  confmillefeuille.cpp  home.cpp  imagelabel.cpp  imagewrapper.cpp  main.cpp  mainwindow.cpp  millefeuillebd.cpp  starttracking.cpp
crazycv/lab_image/ui/: home.ui  starttracking.ui
crazycv/lab_millefeuille/: CMakeLists.txt  confmillefeuille.cpp  cvheaders.h  imagewrapper.cpp  imagewrapper.h  main.cpp  millefeuille.h  millefeuillebd.cpp
crazycv/lab_tracking/: starttracking.h
crazycv/src/Lab4_Vision/: Lab4_Vision.pro  Lab4_Vision.pro.user.15703f5  Lab4_Vision.pro.user.3b15249  Lab4_Vision.pro.user.88515b1  Lab4_Vision.pro.user.a81b3d4  Lab4_Vision.pro.user.d9e5eb1  colorwidget.cpp  confmillefeuille.cpp  confmillefeuille.h  confmillefeuille.ui  cvheaders.h  home.cpp  imagelabel.cpp  imagelabel.h  imagewrapper.cpp  imagewrapper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  millefeuille.cpp  millefeuille.h  millefeuille.ui  millefeuillebd.cpp  starttracking.cpp  starttracking.h  starttracking.ui  tracking.cpp  tracking.h  tracking.ui
crazycv/src/LabTracking/: Makefile  main.cpp
crazycv/src/VideoRecorder/: Makefile  main.cpp
crazycv/src/cameracv/: Makefile  cameracv.cpp
crazycv/src/colorfinder/: colorfinder.cpp
crazycv/src/colorswitcher/: colorswitcher.cpp
crazycv/src/imagedisplayer/: Makefile  imgdisplayercv.cpp
crazycv/src/lab2/: Makefile.windows  colorswitcher.cpp
crazycv/src/lab3/: colorswitcher.cpp
crazycv/src/lab4/: Makefile  colorswitcher.cpp
crazycv/src/mvlar/: CMakeLists.txt
crazycv/src/mvlar/libcontrol/: common_headers.h  tracking.h
crazycv/src/sharpencv/: Makefile  Makefile.windows  sharpencv.cpp
crazycv/src/testcuda/: Makefile  kernel.cu  testcuda.cpp
crazygl/: CMakeLists.txt  CMakeSettings.json
crazygl.old/include/: engine.hpp  headers.hpp  shaders.hpp
crazygl.old/src/Examen1/: Makefile  fragment.glsl  vertex.glsl
crazygl.old/src/Lab4/: main.cpp
crazygl.old/src/TP1/: Makefile  main.cpp
crazygl.old/src/default_project/: fragment.glsl
crazygl.old/src/lab1/: Makefile.windows  test.cpp
crazygl.old/src/lab2/: fragment.glsl  test.cpp  vertex.glsl
crazygl.old/src/test/: Makefile
crazygl/crazygl/: CMakeLists.txt  engine.cpp  engine.h  header.h  mesh.cpp  mesh.h  shaders.cpp  shaders.h  textures.cpp  textures.h
crazygl/include/: engine.h  engine.hpp  headers.hpp  shaders.hpp
crazygl/lab2/: CMakeLists.txt  fragment.glsl  house_maker.cpp  house_maker.h  main.cpp  vertex.glsl
crazygl/procedural-city/: CMakeLists.txt  camera.cpp  camera.h  city.cpp  city.h  main.cpp
crazygl/procedural-city/shaders/: vert_skybox.glsl
crazygl/src/Examen1/: test.cpp
crazygl/src/Lab3/: main.cpp
crazygl/src/Lab4/: fragment.glsl  vertex.glsl
crazygl/src/TP1/: Makefile  Makefile.windows  fragment.glsl  main.cpp  test.cpp  vertex.glsl
crazygl/src/TP2/: Makefile  main.cpp
crazygl/src/default_project/: Makefile  main.cpp
crazygl/src/lab1/: Makefile  test.cpp
crazygl/src/lab2/: fragment.glsl  test.cpp  vertex.glsl
crazygl/src/test/: test.cpp
crazygl/tie-fighter-remise/debug_folder/: README.txt  cmake_install.cmake  tiefighter.ilk
crazygl/tie-fighter-remise/debug_folder/shaders/: frag_obj.glsl  frag_shader.glsl  vert_obj.glsl  vert_shader.glsl  vert_skybox.glsl
crazygl/tie-fighter-remise/debug_folder/textures/outside/procedural-city/: camera.h  city.cpp  main.cpp
crazygl/tie-fighter-remise/debug_folder/textures/outside/procedural-city/shaders/: frag_shader.glsl  frag_skybox.glsl  vert_obj.glsl  vert_shader.glsl
crazygl/tie-fighter-remise/tiefighter/: CMakeLists.txt  camera.h
crazygl/tiefighter/: camera.cpp  city.cpp  city.h  main.cpp
crazygl/tiefighter/shaders/: frag_skybox.glsl
crazygl/video-player/: CMakeLists.txt  main.cpp  rgb_player.h
crazygl/video-player/shaders/: frag.glsl  vert.glsl
cuda/include/: helpme.h
cuda/src/lab1/: Makefile  hsvtorgbkernel.cu  kernel.cu  lab1.cpp  testcuda.cpp
cuda/src/test/: Makefile  testcuda.cpp
include/: capture.hpp  cudaheaders.hpp  cvheaders.hpp  file.hpp  filestorage.hpp  performance.hpp  video.hpp
mvlar/: CMakeLists.txt  CMakeSettings.json
mvlar/libcontrol/: CMakeLists.txt  tracking.cpp
mvlar/libmvlar/: CMakeLists.txt  ap_cmd.cpp  config.h  drone_client.h  math.h  navdata_client.cpp  navdata_client.h  navdata_common.h  thread.cpp  thread.h  typedef.h
mvlar/mvlar/: CMakeLists.txt  mvlar.cpp
mvlar/test/: CMakeLists.txt
mvlar/test/libmvlar_test/: CMakeLists.txt  main.cpp
sii/: CMakeLists.txt  CMakeSettings.json
sii/cuda/src/lab1/: Makefile  hsvtorgbkernel.cu
sii/cuda/src/test/: kernel.cu
sii/labastar/: 2dhelp.cpp  2dhelp.h  2dhelper.h  CMakeLists.txt  main.cpp  map.h  node.cpp  node.h  object.cpp  object.h
sii/labsobel/: CMakeLists.txt  main.cpp
sii/libcuda/: CMakeLists.txt  gpusobel.cpp  gpusobel.h  headers.h  helpme.h  hsvtorgbkernel.cu
webots/controllers/youbot/: YoubotData.h  youbot.c
webots/lib/: arm.c  arm.h  gripper.c
webots/worlds/: .youbot.wbproj  .youbot_front_corner.wbproj  .youbot_left.wbproj  .youbot_left_side.wbproj  .youbot_realistic.wbproj  .youbot_t.wbproj  youbot.wbt  youbot_front_corner.wbt  youbot_left.wbt  youbot_left_side.wbt  youbot_t.wbt
